Changes to the legal footer

--- a/fraud-alert.html
+++ b/fraud-alert.html
@@ -195,10 +195,10 @@
 
             <div class="footer-legal">
                 <ul>
+                    <li><a href="policy-handbook.html">Policy Handbook</a></li>
+                    <li><a href="privacy-policy.html">Privacy Policy</a></li>
                     <li><a href="terms.html">Terms & Conditions</a></li>
                     <li><a href="fraud-alert.html">Fraud Alert</a></li>
-                    <li><a href="privacy-policy.html">Privacy Policy</a></li>
-
                 </ul>
             </div>
 
