--- a/terms.html
+++ b/terms.html
@@ -35,30 +35,44 @@
 
     <header class="terms-header">
         <h1 class="terms-title">Terms &amp; Conditions</h1>
+        <p class="updated">Last Updated: 01, May, 2025</p>
     </header>
 
     <main class="terms-container">
 
         <div class="terms-section">
+            <p class="above-title">Welcome to Caravansary Capital’s official website. By accessing or using our website, you agree to comply with and be bound by the following Terms and Conditions. If you do not agree with any part of these terms, please refrain from using our website.</p>
             <h2>1. Introduction</h2>
-            <p>Welcome to <a href="index.html" class="terms-link">www.CaravansaryCapital.com</a>. These Terms and Conditions govern your use of our website located at [Website URL] and any related services provided by Fact Caravansary Capital.</p>
-            <p>By accessing <a href="index.html" class="terms-link">www.CaravansaryCapital.com</a> you agree to abide by these Terms and Conditions and to comply with all applicable laws and regulations. If you do not agree with these terms, you are prohibited from using or accessing this site or using any other services provided by Caravansary Capital.</p>
+            <p>Caravansary Capital provides this website and its related services for informational and business purposes. These Terms and Conditions govern your use of our website and any content, materials, or services provided through it.</p>
         </div>
 
         <div class="terms-section">
-            <h2>2. Intellectual Property</h2>
-            <p>Unless otherwise stated, Caravansary Capital and/or its licensors own the intellectual property rights for all material on <a href="index.html" class="terms-link">www.CaravansaryCapital.com</a>. All intellectual property rights are reserved. You may access this from <a href="index.html" class="terms-link">www.CaravansaryCapital.com</a>, for your own personal use subjected to restrictions set in these terms and conditions.</p>
-            <p>You must not:</p>
+            <h2>2. Use of the Website</h2>
             <ul class="terms-list">
-                <li>Republish material from <a href="index.html" class="terms-link">www.CaravansaryCapital.com</a></li>
-                <li>Sell, rent, or sub-license material from <a href="index.html" class="terms-link">www.CaravansaryCapital.com</a></li>
-                <li>Reproduce, duplicate, or copy material from <a href="index.html" class="terms-link">www.CaravansaryCapital.com</a></li>
-                <li>Redistribute content from <a href="index.html" class="terms-link">www.CaravansaryCapital.com</a></li>
+                <li>You agree to use this website only for lawful purposes and in accordance with these Terms and Conditions.</li>
+                <li>You shall not use this website for any fraudulent or harmful activities, including but not limited to phishing, spamming, hacking, or unauthorized access.</li>
+                <li>We reserve the right to suspend or terminate access to the website for any user violating these terms.</li>
             </ul>
         </div>
 
         <div class="terms-section">
-            <h2>3. User Responsibilities</h2>
+            <h2>3. Intellectual Property Rights</h2>
+            <ul class="terms-list">
+                <li>All content, including but not limited to text, graphics, logos, images, and software, is the property of Caravansary Capital or its licensors and is protected by applicable intellectual property laws.</li>
+                <li>You may not reproduce, distribute, or modify any content from this website without prior written consent from Caravansary Capital.</li>
+            </ul>
+        </div>
+
+        <div class="terms-section">
+            <h2>4. Third Party Links</h2>
+            <ul class="terms-list">
+                <li>This website may contain links to third-party websites. These links are provided for convenience and do not imply endorsement or responsibility for the content of such external sites.</li>
+                <li>We do not control third-party websites and are not liable for any issues arising from their use.</li>
+            </ul>
+        </div>
+
+        <div class="terms-section">
+            <h2>5. User Responsibilities</h2>
             <ul class="terms-list">
                 <li>You must not use <a href="index.html" class="terms-link">www.CaravansaryCapital.com</a> in any way that causes, or may cause, damage to the website or impairment of the availability or accessibility of <a href="https://www.CaravansaryCapital.com" class="terms-link">www.CaravansaryCapital.com</a>.</li>
                 <li>You must not use <a href="index.html" class="terms-link">www.CaravansaryCapital.com</a> in any way which is unlawful, illegal, fraudulent, or harmful.</li>
@@ -67,32 +81,32 @@
         </div>
 
         <div class="terms-section">
-            <h2>4. Limitation of Liability</h2>
+            <h2>6. Limitation of Liability</h2>
             <p>In no event shall Caravansary Capital, nor any of its officers, directors, and employees, be liable to you for anything arising out of or in any way connected with your use of this Website, whether such liability is under contract, tort or otherwise, and Caravansary Capital, including its officers, directors, and employees shall not be liable for any indirect, consequential, or special liability arising out of or in any way related to your use of this Website</p>
         </div>
 
         <div class="terms-section">
-            <h2>5. Idemnification</h2>
+            <h2>7. Idemnification</h2>
             <p>You hereby indemnify to the fullest extent Caravansary Capital from and against any and all liabilities, costs, demands, causes of action, damages, and expenses (including reasonable attorney's fees) arising out of or in any way related to your breach of any of the provisions of these Terms.</p>
         </div>
 
         <div class="terms-section">
-            <h2>6. Termination</h2>
+            <h2>8. Termination</h2>
             <p>We may terminate or suspend your access to the website immediately, without prior notice or liability, for any reason whatsoever, including without limitation if you breach the Terms.</p>
         </div>
 
         <div class="terms-section">
-            <h2>7. Governing Law</h2>
+            <h2>9. Governing Law</h2>
             <p>These terms shall be governed and construed in accordance with the laws of Turkey, without regard to its conflict of law provisions.</p>
         </div>
 
         <div class="terms-section">
-            <h2>8. Changes to Terms and Conditions</h2>
+            <h2>10. Changes to Terms and Conditions</h2>
             <p>Caravansary Capital reserves the right to revise these Terms at any time as it sees fit, and by using this Website you are expected to review these Terms on a regular basis.</p>
         </div>
 
         <div class="terms-section">
-            <h2>9. Contact Information</h2>
+            <h2>11. Contact Information</h2>
             <p>If you have any questions about these Terms, please contact us at:</p>
             <p><a href="index.html" class="terms-link">www.CaravansaryCapital.com</a></p>
             <p>Caravansary Capital / 22 November Street, 1769 Palm Tree Bld. – Beirut, Lebanon.</p>
@@ -134,10 +148,10 @@
 
             <div class="footer-legal">
                 <ul>
+                    <li><a href="policy-handbook.html">Policy Handbook</a></li>
+                    <li><a href="privacy-policy.html">Privacy Policy</a></li>
                     <li><a href="terms.html">Terms & Conditions</a></li>
                     <li><a href="fraud-alert.html">Fraud Alert</a></li>
-                    <li><a href="privacy-policy.html">Privacy Policy</a></li>
-
                 </ul>
             </div>
 
