Fixed the legal links content and the nav bar when its in phone format in investor opportunities

--- a/fraud-alert.html
+++ b/fraud-alert.html
@@ -40,125 +40,56 @@
     <div class="fraud-alert-container">
 
         <section class="fraud-alert-section">
-            <h2 class="section-title">Employment</h2>
-            <p>Please be aware of spoof e-mails and fake job postings that appear to be from well-known companies, including Caravansary Capital. To bait you, an e-mail or job posting may offer you an immediate employment opportunity, then ask you to submit personal information or give you direction to begin work immediately. These fake emails and job postings are an attempt to gain your private information through fraudulent methods.</p>
-            <p>Please note Caravansary Capital does not make offers of employment prior to completion of a thorough hiring process, which includes a face-to-face interview. The company does not request any type of payment from the candidate during the hire process.</p>
-            <p>If you have received an offer of employment and you have not participated in a face-to-face interview with Caravansary Capital, the correspondence you received is fraudulent and should be disregarded.</p>
+            <h1 class="section-title">FRAUD ALERT WARNING</h1>
+            <p>Caravansary Capital is committed to conducting business with the highest standards of integrity and transparency. We take fraud prevention seriously and wish to alert our partners, investors, and the general public about potential fraudulent activities misusing our name, brand, and reputation.</p>
         </section>
 
         <section class="fraud-alert-section">
-            <h2 class="section-title">Checks</h2>
-            <p>Individuals should exercise caution if they receive unexplained checks payable to them and that appear to be coming from Caravansary Capital or appear to be drawn upon a Caravansary Capital bank account. Caravansary Capital does not typically send checks to anyone unless the company is doing business with that individual.</p>
-            <p>Never deposit any check into your bank account unless you are sure it is genuine.</p>
+            <h2 class="section-title">Beware of Fraudulent Activities</h2>
+            <p>We have received reports of unauthorized individuals and entities falsely claiming to represent Caravansary Capital. These fraudulent activities may include but are not limited to:</p>
+            <ul class="fraud-list">
+                <li>Fake investment offers promising unrealistic returns.</li>
+                <li>Unsolicited emails, phone calls, or messages requesting personal information or financial transactions.</li>
+                <li>Fraudulent websites, social media accounts, or advertisements misusing our name, logo, and branding.</li>
+                <li>Impersonation of Caravansary Capital executives or representatives.</li>
+            </ul>
         </section>
 
         <section class="fraud-alert-section">
-            <h2 class="section-title">Payment Instructions</h2>
-            <p>Be aware of efforts by third-parties to illegally obtain payments through fraudulent emails or other forms of communication to provide new and different payment instructions. Please do not act upon or accept any request to change the payment instructions specified in your contract with Caravansary Capital unless the communication comes directly from the Financial Manager’s office of Caravansary Capital in writing by regular mail and you follow up with a phone call to Caravansary Capital at a number you know to be accurate.</p>
+            <h2 class="section-title">How to Identify Legitimate Communication from Caravansary Capital</h2>
+            <p>To protect yourself from fraud, please note the following:</p>
+            <ul class="fraud-list">
+                <li>Official communications from Caravansary Capital will only come from our verified domain: [Insert Official Website URL].</li>
+                <li>We do not solicit investments through social media, unsolicited phone calls, or unofficial email addresses.</li>
+                <li>Any investment opportunity, partnership proposal, or financial transaction must be formally documented and legally vetted.</li>
+                <li>Our official representatives will never request personal banking information, payments, or confidential details via informal channels.</li>
+            </ul>
         </section>
 
         <section class="fraud-alert-section">
-            <h2 class="section-title">Charitable Organizations</h2>
-            <p>Be aware of fraudulent impersonators reaching out to non-profit and charitable organizations with promises of donations. Caravansary Capital will never send a request to an organization asking for their banking information to make an unsolicited donation.</p>
-            <p>Caravansary Capital’s commitment to community outreach is an integral part of our business. Our long-standing relationships with charitable organizations bring benefits to the communities in which we work. If you would like more information on how Caravansary Capital can support your organization, please contact Rayan Salma at rayan.salma@CaravansaryCapital.com</p>
+            <h2 class="section-title">Steps to Protect Yourself</h2>
+            <p>If you suspect fraudulent activity, take the following precautions:</p>
+            <ul class="fraud-list-numbered">
+                <li><strong>Verify Authenticity:</strong> Contact us directly through our official website or office before responding to any suspicious communication.</li>
+                <li><strong>Do Not Share Personal Information:</strong> Never disclose your financial details, passwords, or personal information to unverified sources.</li>
+                <li><strong>Report Suspicious Activity:</strong> If you receive a suspicious request or encounter unauthorized use of our brand, please report it immediately to [Insert Contact Email or Hotline].</li>
+                <li><strong>Stay Informed:</strong> Regularly check our official website for updates on fraud prevention and alerts.</li>
+            </ul>
         </section>
 
         <section class="fraud-alert-section">
-            <h2 class="section-title">Fraudulent Purchase Order</h2>
-            <p>Fraudulent Purchase Order schemes include imposters posing as an employee of a company. These imposters place orders for materials and equipment over the phone or via email that looks or sounds like Caravansary Capital email account; using the actual name, address and title of a Caravansary Capital employee; and/or providing a phone number that when called is always answered “Caravansary Capital”.</p>
-            <p>Imposters provide false purchase order and/or contract numbers; stress that the order needs to be expedited; and explain that there may not be someone on-site to sign for the delivery but ask you to leave it at the site without a signature.</p>
-
-            <h3>What you can do</h3>
-            <p>Confirm the order with Caravansary Capital prior to fulfilling the order by contacting the main office for Caravansary Capital listed on the company website. If you are an existing Caravansary Capital vendor, call the office you usually do business with. Do not use the phone number that was provided with the order and do not use email or text. Ask to speak to the Project Manager on the job that the order is for, or the Office Financial Manager. Please contact us to report an imposter as well. Caravansary Capital will take the necessary steps to prevent these incidents from occurring in the future.</p>
+            <h2 class="section-title">Caravansary Capital’s Liability Disclaimer</h2>
+            <p>Caravansary Capital is not responsible for any losses incurred due to fraudulent activities carried out by unauthorized third parties misusing our name or brand. We urge all stakeholders to exercise caution and verify any claims before engaging in financial transactions.</p>
         </section>
 
         <section class="fraud-alert-section">
-            <h2 class="section-title">Protecting Your Identity</h2>
-            <p>Click <a href="#" class="protecting-link">here</a> to access information and resources to help protect yourself from and respond to incidents of identity theft.</p>
-            <p>Protecting your identity while using a website involves several strategies to maintain your privacy and security. Here are some tips:</p>
-
-            <ol class="identity-tips-list">
-                <li>
-                    <h2 class="fraud-section-title">Use a VPN (Virtual Private Network)</h2>
-                    <ul>
-                        <li>A VPN masks your IP address, encrypting your internet connection and making it harder for others to track your online activities.</li>
-                    </ul>
-                </li>
-                <li>
-                    <h2 class="fraud-section-title">Enable Privacy Settings</h2>
-                    <ul>
-                        <li>Adjust the privacy settings in your web browser to limit data sharing. Use private browsing modes (Incognito in Chrome, Private Browsing in Firefox).</li>
-                    </ul>
-                </li>
-                <li>
-                    <h2 class="fraud-section-title">Avoid Using Personal Information</h2>
-                    <ul>
-                        <li>When creating accounts or filling out forms, use an alias or pseudonym. Avoid sharing your real name, address, or phone number unless absolutely necessary.</li>
-                    </ul>
-                </li>
-                <li>
-                    <h2 class="fraud-section-title">Use Secure Passwords</h2>
-                    <ul>
-                        <li>Create strong, unique passwords for each account. Consider using a password manager to keep track of them.</li>
-                    </ul>
-                </li>
-                <li>
-                    <h2 class="fraud-section-title">Enable Two-Factor Authentication (2FA)</h2>
-                    <ul>
-                        <li>Add an extra layer of security by enabling 2FA, which requires a second form of verification besides your password.</li>
-                    </ul>
-                </li>
-                <li>
-                    <h2 class="fraud-section-title">Be Wary of Phishing Scams</h2>
-                    <ul>
-                        <li>Avoid clicking on suspicious links or downloading attachments from unknown sources. Always verify the legitimacy of the website.</li>
-                    </ul>
-                </li>
-                <li>
-                    <h2 class="fraud-section-title">Use Encrypted Communication</h2>
-                    <ul>
-                        <li>Prefer websites that use HTTPS, ensuring that your data is encrypted during transmission.</li>
-                    </ul>
-                </li>
-                <li>
-                    <h2 class="fraud-section-title">Limit Social Media Sharing</h2>
-                    <ul>
-                        <li>Be cautious about sharing personal information on social media platforms. Adjust privacy settings to control who can see your posts.</li>
-                    </ul>
-                </li>
-                <li>
-                    <h2 class="fraud-section-title">Use Disposable Email Addresses</h2>
-                    <ul>
-                        <li>For websites that require an email address, consider using a disposable email service to avoid spam and keep your primary email private.</li>
-                    </ul>
-                </li>
-                <li>
-                    <h2 class="fraud-section-title">Review Privacy Policies</h2>
-                    <ul>
-                        <li>Before using a website, review its privacy policy to understand how your data will be used and protected.</li>
-                    </ul>
-                </li>
-                <li>
-                    <h2 class="fraud-section-title">Install Security Software</h2>
-                    <ul>
-                        <li>Use reputable antivirus and anti-malware software to protect your device from malicious attacks.</li>
-                    </ul>
-                </li>
-                <li>
-                    <h2 class="fraud-section-title">Regularly Clear Cookies and Cache</h2>
-                    <ul>
-                        <li>Clear your browser cookies and cache to remove stored data that could be used to track your online behavior.</li>
-                    </ul>
-                </li>
-                <li>
-                    <h2 class="fraud-section-title">Disable Location Services</h2>
-                    <ul>
-                        <li>Turn off location services in your browser and on your device unless necessary for the website’s functionality.</li>
-                    </ul>
-                </li>
-            </ol>
-
-            <p>By implementing these strategies, you can significantly enhance your online privacy and protect your identity while browsing the web.</p>
+            <h2 class="section-title">Contact Us</h2>
+            <p>If you have any concerns or need further verification, please reach out to us at:</p>
+            <p class="company-info"><strong>Caravansary Capital</strong></p>
+            <p class="company-info">Caravansary Capital / 22 November Street, 1769 Palm Tree Bld. – Beirut, Lebanon</p>
+            <p class="company-info">Email: <a href="mailto:support@CaravansaryCapital.com" class="contacts-link">support@CaravansaryCapital.com</a></p>
+            <p class="company-info">+961 76 973 165</p>
+            <p>We appreciate your vigilance in helping us combat fraud and maintain the integrity of our business operations.</p>
         </section>
 
     </div>
