--- a/policy-handbook.html
+++ b/policy-handbook.html
@@ -117,6 +117,7 @@
             <p class="company-info">Caravansary Capital / 22 November Street, 1769 Palm Tree Bld. – Beirut, Lebanon</p>
             <p class="company-info">Email: <a href="mailto:support@CaravansaryCapital.com" class="contacts-link">support@CaravansaryCapital.com</a></p>
             <p class="company-info">+961 76 973 165</p>
+            <p>By engaging with Caravansary Capital, all stakeholders acknowledge and support our commitment to ethical business practices, sustainability, and compliance with regulatory standards.</p>
         </section>
     </main>
 
