--- a/terms.html
+++ b/terms.html
@@ -74,44 +74,56 @@
         <div class="terms-section">
             <h2>5. User Responsibilities</h2>
             <ul class="terms-list">
-                <li>You must not use <a href="index.html" class="terms-link">www.CaravansaryCapital.com</a> in any way that causes, or may cause, damage to the website or impairment of the availability or accessibility of <a href="https://www.CaravansaryCapital.com" class="terms-link">www.CaravansaryCapital.com</a>.</li>
-                <li>You must not use <a href="index.html" class="terms-link">www.CaravansaryCapital.com</a> in any way which is unlawful, illegal, fraudulent, or harmful.</li>
-                <li>You must not use <a href="index.html" class="terms-link">www.CaravansaryCapital.com</a> to copy, store, host, transmit, send, use, publish, or distribute any material which consists of (or is linked to) any spyware, computer virus, Trojan horse, worm, keystroke logger, rootkit, or other malicious computer software.</li>
+                <li>The content and services provided on this website are offered “as is” and “as available,” without warranties of any kind, whether express or implied.</li>
+                <li>We do not guarantee that the website will always be secure, uninterrupted, or error-free.</li>
+                <li>Any reliance on the information provided on this website is at your own risk.</li>
             </ul>
         </div>
 
         <div class="terms-section">
             <h2>6. Limitation of Liability</h2>
-            <p>In no event shall Caravansary Capital, nor any of its officers, directors, and employees, be liable to you for anything arising out of or in any way connected with your use of this Website, whether such liability is under contract, tort or otherwise, and Caravansary Capital, including its officers, directors, and employees shall not be liable for any indirect, consequential, or special liability arising out of or in any way related to your use of this Website</p>
+            <ul class="terms-list">
+                <li>Caravansary Capital, its affiliates, and its representatives shall not be liable for any direct, indirect, incidental, or consequential damages arising from your use of this website.</li>
+                <li>This includes but is not limited to data loss, financial loss, or reputational damage resulting from website errors, third-party actions, or unauthorized access.</li>
+            </ul>
         </div>
 
         <div class="terms-section">
-            <h2>7. Idemnification</h2>
-            <p>You hereby indemnify to the fullest extent Caravansary Capital from and against any and all liabilities, costs, demands, causes of action, damages, and expenses (including reasonable attorney's fees) arising out of or in any way related to your breach of any of the provisions of these Terms.</p>
+            <h2>7. Privacy Policy</h2>
+            <ul class="terms-list">
+                <li>Our collection and use of personal information are governed by our Privacy Policy. By using this website, you acknowledge and consent to our data practices as described in the Privacy Policy.</li>
+            </ul>
         </div>
 
         <div class="terms-section">
-            <h2>8. Termination</h2>
-            <p>We may terminate or suspend your access to the website immediately, without prior notice or liability, for any reason whatsoever, including without limitation if you breach the Terms.</p>
+            <h2>8. Indemnification</h2>
+            <p>You agree to indemnify and hold harmless Caravansary Capital from any claims, damages, or legal fees resulting from your misuse of the website or violation of these Terms and Conditions.</p>
         </div>
 
         <div class="terms-section">
-            <h2>9. Governing Law</h2>
-            <p>These terms shall be governed and construed in accordance with the laws of Turkey, without regard to its conflict of law provisions.</p>
+            <h2>9. Changes to Terms and Conditions</h2>
+            <ul class="terms-list">
+                <li>Caravansary Capital reserves the right to update, modify, or remove any part of these Terms and Conditions at any time.</li>
+                <li>Continued use of the website after changes have been made constitutes your acceptance of the revised Terms and Conditions.</li>
+            </ul>
         </div>
 
         <div class="terms-section">
-            <h2>10. Changes to Terms and Conditions</h2>
-            <p>Caravansary Capital reserves the right to revise these Terms at any time as it sees fit, and by using this Website you are expected to review these Terms on a regular basis.</p>
+            <h2>10. Governing Law</h2>
+            <ul class="terms-list">
+                <li>These Terms and Conditions shall be governed by and construed in accordance with the laws of [Insert Jurisdiction].</li>
+                <li>Any disputes arising from the use of this website shall be subject to the exclusive jurisdiction of the courts in [Insert Jurisdiction].</li>
+            </ul>
         </div>
 
         <div class="terms-section">
             <h2>11. Contact Information</h2>
-            <p>If you have any questions about these Terms, please contact us at:</p>
-            <p><a href="index.html" class="terms-link">www.CaravansaryCapital.com</a></p>
-            <p>Caravansary Capital / 22 November Street, 1769 Palm Tree Bld. – Beirut, Lebanon.</p>
-            <p>Email: <a href="mailto:support@CaravansaryCapital.com" class="terms-link">support@CaravansaryCapital.com</a></p>
-            <p>Phone Number: +961 76 973 165</p>
+            <p>If you have any questions or concerns regarding these Terms and Conditions, please contact us at:</p>
+            <p class="company-info"><strong>Caravansary Capital</strong></p>
+            <p class="company-info">Caravansary Capital / 22 November Street, 1769 Palm Tree Bld. – Beirut, Lebanon</p>
+            <p class="company-info">Email: <a href="mailto:support@CaravansaryCapital.com" class="contacts-link">support@CaravansaryCapital.com</a></p>
+            <p class="company-info">+961 76 973 165</p>
+            <p>By using this website, you acknowledge that you have read, understood, and agreed to these Terms and Conditions.</p> 
         </div>
 
     </main>
